syntax = "proto3";

import "response_code.proto";

option go_package = "./agent_proto";

package agent_proto;


service ApacheService {
  rpc GetApacheInfo (GetApacheInfoRequest) returns (GetApacheInfoResponse) {}
}

message GetApacheInfoRequest {

}

message GetApacheInfoResponse {
  string message = 1;
  ResponseCode code = 2;
  repeated string configFiles = 3;
  string root = 4;
  repeated string serverNames = 5;
  repeated string listens = 6;
  repeated ApacheVirtualHost virtualHosts = 7;
  repeated ApacheLog errorLogs = 8;
  repeated ApacheLog customLogs = 9;
}


message ApacheVirtualHost {
    repeated string serverNames = 1;
    repeated string listens = 2;
    string root = 3;
    ApacheLog errorLog = 4;
    ApacheLog customLog = 5;
}


message ApacheLog{
  string filePath = 1;
  string size = 2;
  string modifyTime = 3;
}