syntax = "proto3";

import "response_code.proto";

option go_package="./agent_proto";
package agent_proto;

service NetworkService{
    rpc GetNetworkInterface(GetNetworkInterfaceRequest) returns ( GetNetworkInterfaceResponse) {}
    rpc GetAllNetworkConnect(GetAllNetworkConnectRequest) returns (GetAllNetworkConnectResponse) {}
    rpc GetNetworkBindList(GetNetworkBindListRequest) returns (GetNetworkBindListResponse) {}
}

message  GetNetworkInterfaceRequest{
}

message  GetNetworkInterfaceResponse{
    string message = 1;
    ResponseCode code = 2;
    repeated NetworkInterface network_interfaces = 3;
}

message NetworkInterface{
    string name = 1;
    string mac = 2;
    repeated string ipv4 = 3;
    repeated string ipv6 = 4;
    string flags = 5;
}

message GetAllNetworkConnectRequest{
}

message GetAllNetworkConnectResponse{
    string message = 1;
    ResponseCode code = 2;
    repeated NetworkConnect network_connects = 3;
}

message NetworkConnect{
    uint32 fd = 1;
    string family = 2;
    string type = 3;
    int32 pid = 4;
    Address local = 5;
    Address remote = 6;
    string status = 7;
}

message Address{
    string ip = 1;
    uint32 port = 2;
}

message GetNetworkBindListRequest{
   string interface_name = 1; //空表示所有
   Protocol protocol = 2;
}

enum Protocol{
    ALL = 0;
    TCP = 1;
    UDP = 2;
}

message GetNetworkBindListResponse{
    string message = 1;
    ResponseCode code = 2;
    repeated NetworkBind network_binds = 3;
}

message NetworkBind{
    uint32 fd = 1;
    string family = 2;
    string type = 3;
    Address bind = 4;
    string status = 5;
    string cmd = 6;
}